@@ -38,8 +38,8 @@ import org.junit.Test;
 import org.kiji.mapreduce.kvstore.KeyValueStoreReader;
 import org.kiji.mapreduce.kvstore.framework.KeyValueStoreConfiguration;
 import org.kiji.mapreduce.kvstore.impl.KeyValueStoreConfigSerializer;
-import org.kiji.schema.EntityId;
 import org.kiji.schema.KijiClientTest;
+import org.kiji.schema.KijiRowKeyComponents;
 import org.kiji.schema.KijiTable;
 import org.kiji.schema.KijiTableWriter;
 import org.kiji.schema.KijiURI;
@@ -181,11 +181,11 @@ public class TestKijiTableKeyValueStore extends KijiClientTest {
   public void testSuccessfulReadingFromKVStore() throws IOException {
     KijiTable table = getKiji().openTable("table");
     try {
-      EntityId entityId = table.getEntityId("identifier");
+      KijiRowKeyComponents rowKey = KijiRowKeyComponents.fromComponents("identifier");
       String value = "value";
       KijiTableWriter writer = table.openTableWriter();
       try {
-        writer.put(entityId, "family", "column", "value");
+        writer.put(rowKey.getEntityIdForTable(table), "family", "column", "value");
       } finally {
         closeOrLog(writer);
       }
@@ -194,30 +194,10 @@ public class TestKijiTableKeyValueStore extends KijiClientTest {
           .withTable(KijiURI.newBuilder(getKiji().getURI().toString() + "/table").build())
           .withColumn("family", "column")
           .build();
-      KeyValueStoreReader<EntityId, CharSequence> reader = input.open();
-      assertTrue(reader.containsKey(entityId));
-      assertEquals(value, reader.get(entityId).toString());
-      assertFalse(reader.containsKey(table.getEntityId("missingIdentifier")));
-    } finally {
-      releaseOrLog(table);
-    }
-  }
-
-  @Test
-  public void testGetTableForReader() throws IOException {
-    KijiTable table = getKiji().openTable("table");
-    try {
-      EntityId entityIdDirect = table.getEntityId("identifier");
-
-      KijiTableKeyValueStore<CharSequence> input = KijiTableKeyValueStore.builder()
-          .withTable(KijiURI.newBuilder(getKiji().getURI().toString() + "/table").build())
-          .withColumn("family", "column")
-          .build();
-      KeyValueStoreReader<EntityId, CharSequence> reader = input.open();
-      KijiTable retrievedTable = KijiTableKeyValueStore.getTableForReader(reader);
-      EntityId entityIdRetrieved = retrievedTable.getEntityId("identifier");
-      assertEquals(entityIdDirect, entityIdRetrieved);
-      closeOrLog(reader);
+      KeyValueStoreReader<KijiRowKeyComponents, CharSequence> reader = input.open();
+      assertTrue(reader.containsKey(rowKey));
+      assertEquals(value, reader.get(rowKey).toString());
+      assertFalse(reader.containsKey(KijiRowKeyComponents.fromComponents("missingIdentifier")));
     } finally {
       releaseOrLog(table);
     }
